Used request dispatcher to pass data from servlet to another servlet

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,16 @@
 
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/add</url-pattern>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>SuccessServlet</servlet-name>
+        <servlet-class>com.example.javaee_hello3.SuccessServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>SuccessServlet</servlet-name>
+        <url-pattern>/success</url-pattern>
+    </servlet-mapping>
 </web-app>
